@@ -267,7 +267,9 @@ struct spvm_env {
   int32_t (*is_numeric_array)(SPVM_ENV* env, void* object);
   int32_t (*is_mulnum_array)(SPVM_ENV* env, void* object);
   int32_t (*get_elem_byte_size)(SPVM_ENV* env, void* array);
+  void* (*new_array_proto_raw)(SPVM_ENV* env, void* array, int32_t length);
   void* (*new_array_proto)(SPVM_ENV* env, void* array, int32_t length);
+  void* (*copy_raw)(SPVM_ENV* env, void* object);
   void* (*copy)(SPVM_ENV* env, void* object);
 };
 #endif
